--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hariyali Gram Panchayat | Official Website | Maharashtra</title>
-    <meta name="description" content="Official website of Hariyali Gram Panchayat, Pune District, Maharashtra. Access government schemes, development projects, announcements, and services for rural development and transparent governance." />
-    <meta name="keywords" content="gram panchayat, hariyali village, maharashtra, pune district, government schemes, rural development, village administration, panchayat services" />
-    <meta name="author" content="Hariyali Gram Panchayat" />
-    <link rel="canonical" href="https://www.hariyaligram.gov.in" />
+    <title>Shivankhed Gram Panchayat | Official Website | Maharashtra</title>
+    <meta name="description" content="Official website of Shivankhed Gram Panchayat, Latur District, Maharashtra. Access government schemes, development projects, announcements, and services for rural development and transparent governance." />
+    <meta name="keywords" content="gram panchayat, Shivankhed village, maharashtra, Latur district, government schemes, rural development, village administration, panchayat services" />
+    <meta name="author" content="Shivankhed Gram Panchayat" />
+    <link rel="canonical" href="https://www.Shivankhedgram.gov.in" />
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Hariyali Gram Panchayat | Official Website | Maharashtra" />
-    <meta property="og:description" content="Official website of Hariyali Gram Panchayat serving the rural community with transparent governance, development projects, and government services." />
+    <meta property="og:title" content="Shivankhed Gram Panchayat | Official Website | Maharashtra" />
+    <meta property="og:description" content="Official website of Shivankhed Gram Panchayat serving the rural community with transparent governance, development projects, and government services." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.hariyaligram.gov.in" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.Shivankhedgram.gov.in" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
     <meta property="og:locale" content="en_IN" />
-    <meta property="og:site_name" content="Hariyali Gram Panchayat" />
+    <meta property="og:site_name" content="Shivankhed Gram Panchayat" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Hariyali Gram Panchayat | Official Website" />
-    <meta name="twitter:description" content="Access government schemes, development projects, and services from Hariyali Gram Panchayat, Maharashtra." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Shivankhed Gram Panchayat | Official Website" />
+    <meta name="twitter:description" content="Access government schemes, development projects, and services from Shivankhed Gram Panchayat, Maharashtra." />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <!-- Additional SEO Meta Tags -->
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="geo.region" content="IN-MH" />
-    <meta name="geo.placename" content="Hariyali, Pune, Maharashtra" />
+    <meta name="geo.placename" content="Shivankhed, Latur, Maharashtra" />
     <meta name="geo.position" content="18.5204;73.8567" />
     <meta name="ICBM" content="18.5204, 73.8567" />
   </head>
